--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "solana-txn-tui"
 version = "0.1.0"
 edition = "2021"
-authors = ["Raghav Sharma <raghavsharma@example.com>"]
+authors = ["Raghav Sharma <raghu250407@gmail.com>"]
 description = "A comprehensive TUI for exploring Solana transactions and accounts"
 license = "MIT"
 repository = "https://github.com/Some1UKnow/solana-txn-tui"
