ci: Limit cargo build jobs to 1 in the release workflow.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -63,6 +63,8 @@ jobs:
         with:
           command: build
           args: --release --target ${{ matrix.target }}
+        env:
+          CARGO_BUILD_JOBS: 1
 
       - name: Prepare binary name
         shell: bash
