--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ anyhow = "1.0"
 chrono = "0.4"
 unicode-width = "0.1"
 bs58 = "0.5"
+openssl = { version = "*", features = ["vendored"] }
 
 [profile.release]
 strip = true      # Automatically strip symbols from the binary
